--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/belgium-home-shirt.jpg
-  #   - assets/img2.jpg
+    - images/
   #   - assets/img3.jpg
   #   - images/a_dot_ham.jpeg
 
